; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_call.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_x86.c_emit_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"call %x (%x+%x)\0A\00", align 1
@out = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_call(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i64, i64* @out, align 8
  %5 = trunc i64 %4 to i32
  %6 = add nsw i32 %5, 5
  %7 = load i32, i32* %2, align 4
  %8 = load i64, i64* @out, align 8
  %9 = trunc i64 %8 to i32
  %10 = sub nsw i32 %7, %9
  %11 = sub nsw i32 %10, 5
  %12 = call i32 @assem_debug(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %3, i32 %6, i32 %11)
  %13 = call i32 @output_byte(i32 232)
  %14 = load i32, i32* %2, align 4
  %15 = load i64, i64* @out, align 8
  %16 = trunc i64 %15 to i32
  %17 = sub nsw i32 %14, %16
  %18 = sub nsw i32 %17, 4
  %19 = call i32 @output_w32(i32 %18)
  ret void
}

declare dso_local i32 @assem_debug(i8*, i32, i32, i32) #1

declare dso_local i32 @output_byte(i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
